# ebike

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  package.xml
.github/workflows/: pre-commit.yaml
config/: show_reach.rviz  visualization.rviz
ebike/: benchmark.py  ik.py  robot.py  scenario.py  utils.py  visualization.py
launch/: show_reach.launch.py  visualization.launch.py
scenarios/: barrel.pcd  barrel.ply  barrel_targets.ply  empty.ply  kallax.pcd  random_100.pcd  random_1000.pcd  random_ur.pcd  shelf.pcd  shelf.ply  shelf_targets.ply  small_table.pcd  small_table.ply  small_table_targets.ply  table.pcd  table.ply  table_objects.pcd  table_objects.ply  table_objects_targets.ply  table_targets.ply
scripts/: evaluation_plots.py  generate_plots.py  generate_random_reachable.cpp  generate_random_reachable_ur.cpp  run_benchmark.py  run_optuna.py
